@@ -75,6 +75,8 @@ extern int zeng_enable_thread_running;
 
 extern z80_bit zeng_force_reconnect_failed_retries;
 
+extern int zeng_utils_sync_local_to_remote_thread_running;
+
 #define MAX_ZENG_HOSTNAME 256
 
 #endif
